# openadr3-client-gac-compliance

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  REUSE.toml  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: README.md  cd.yml  ci.yml  codeql.yml
openadr3_client_gac_compliance/: __init__.py  config.py  event_gac_compliant.py  program_gac_compliant.py
openadr3_client_gac_compliance/gac20/: __init__.py  event_gac_compliant.py  plugin.py  program_gac_compliant.py  ven_gac_compliant.py
openadr3_client_gac_compliance/gac21/: __init__.py  event_gac_compliant.py  plugin.py  program_gac_compliant.py  ven_gac_compliant.py
openadr3_client_gac_compliance/gac30/: __init__.py
openadr3_client_gac_compliance/gac31/: __init__.py
tests/: __init__.py
tests/domain/: __init__.py  test_event_gac_compliance.py  test_program_gac_compliance.py
tests/domain/gac20/: __init__.py  test_event_gac_compliance.py  test_program_gac_compliance.py  test_ven_gac_compliance.py
tests/domain/gac21/: __init__.py  test_event_gac_compliance.py  test_program_gac_compliance.py  test_ven_gac_compliance.py
tests/domain/gac30/: test_event_gac_compliance.py  test_program_gac_compliance.py
