# SPDX-FileCopyrightText: Contributors to openadr3-client-gac-compliance <https://github.com/ElaadNL/openadr3-client-gac-compliance>
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "openadr3-client-gac-compliance"
version = "3.0.1"
description = ""
authors = [
    { name = "Nick van der Burgt", email = "nick.van.der.burgt@elaad.nl" },
    { name = "Stijn van Houwelingen", email = "stijn.van.houwelingen@elaad.nl" },
]
requires-python = ">=3.12, <4"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "pydantic (>=2.11.2,<3.0.0)",
    "openadr3-client (>=1.0.0a1,<2.0.0)",
    "pycountry (>=24.6.1,<25.0.0)",
]

[project.urls]
Homepage = "https://github.com/ElaadNL/openadr3-client"
Repository = "https://github.com/ElaadNL/openadr3-client"
"Bug Tracker" = "https://github.com/ElaadNL/openadr3-client/issues"
Changelog = "https://github.com/ElaadNL/openadr3-client/releases"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0,<2",
    "ruff>=0.11.4,<0.12",
    "pytest>=8.3.5,<9",
    "pytest-cov>=6.1.1,<7",
    "taskipy>=1.14.1,<2",
    "bandit[toml]>=1.9.2",
    "reuse>=6.2.0",
    "pre-commit>=4.5.1",
]

[tool.hatch.build.targets.sdist]
include = ["openadr3_client"]

[tool.hatch.build.targets.wheel]
include = ["openadr3_client"]

[[tool.mypy.overrides]]
module = ["openadr3_client"]
ignore_missing_imports = true

[tool.taskipy.tasks]
local-ci = "task check && task format && task mypy && task bandit && task test && task reuse"
fix = "task check-fix && task format-fix && task mypy && task bandit"
check = "ruff check ."
check-fix = "ruff check --fix ."
check-ci = "ruff check --output-format=github --no-cache ."
mypy = "mypy . --check-untyped-defs"
format = "ruff format . --diff"
format-fix = "ruff format ."
format-ci = "ruff format --diff --no-cache ."
bandit = "bandit -c pyproject.toml -r ."
# Will only add headers to files that are not already licensed.
# Cannot ignore uv.lock through REUSE.toml, see https://codeberg.org/fsfe/reuse-tool/pulls/1303
reuse-fix = """
reuse annotate \
  --license Apache-2.0 \
  --copyright "Contributors to openadr3-client-gac-compliance <https://github.com/ElaadNL/openadr3-client-gac-compliance>" \
  --exclude-year \
  --recursive \
  --skip-unrecognised \
  --skip-existing \
  .
"""
reuse = "reuse lint"
test = "pytest --cov --doctest-modules openadr3_client/ tests/"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

# Do not require docstrings for functions, methods and classes
ignore = [
    # From:https://github.com/wemake-services/wemake-django-template/blob/master/pyproject.toml
    "A005",   # allow to shadow stdlib and builtin module names
    "COM812", # trailing comma, conflicts with `ruff format`
    # Different doc rules that we don't really care about:
    "D100",
    "D104",
    "D106",
    "D203",
    "D212",
    "D401",
    "D404",
    "D405",
    "ISC001",  # implicit string concat conflicts with `ruff format`
    "ISC003",  # prefer explicit string concat over implicit concat
    "PLR09",   # we have our own complexity rules
    # "PLR2004", # do not report magic numbers -> I do want to report magic numbers
    "PLR6301", # do not require classmethod / staticmethod when self not used
    "TRY003",  # long exception messages from `tryceratops`
    # Start of own error codes
    "ANN002", # Ignore unused *args
    "ANN003", # Ignore unused **kwargs
    "D107", # Allow undocumented __init__
    "TC001", # Move to type checking block (does not play nice with pydantic models)
    "TC002", # Move to type checking block (does not play nice with pydantic models)
]

# Ignores S101 ("Use of 'assert' detected") for the tests.
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN201", "SLF001", "S106", "S105", "S311", "PLR2004", "PT018"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
